// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VenuesContainer should match snapshot 1`] = `
<section
  className="VenuesContainer"
>
  <article
    className="search-bar-container"
  >
    <Connect(VenueSearchBar)
      location="venues"
    />
  </article>
  <article
    className="venues-container"
  >
    <h3>
      Found 1 venues in DENVER
    </h3>
    <article
      className="venue-card"
      key="1"
    >
      <h3>
        Venue One
      </h3>
      <p>
        Here be Dragons
      </p>
    </article>
  </article>
</section>
`;

exports[`VenuesContainer should match snapshot with error/loading 1`] = `
<section
  className="VenuesContainer"
>
  <article
    className="search-bar-container"
  >
    <Connect(VenueSearchBar)
      location="venues"
    />
  </article>
  <article
    className="venues-container"
  >
    <h3>
      Found 1 venues in DENVER
    </h3>
    <h4>
      Failed to fetch
    </h4>
    <article
      className="venue-card"
      key="1"
    >
      <h3>
        Venue One
      </h3>
      <p>
        Here be Dragons
      </p>
    </article>
  </article>
</section>
`;
